<resources>
    <string name="app_name">随动</string>

    <string name="pickerview_cancel">取消</string>
    <string name="pickerview_submit">确定</string>
    <string name="pickerview_year">年</string>
    <string name="pickerview_month">月</string>
    <string name="pickerview_day">日</string>
    <string name="pickerview_hours">时</string>
    <string name="pickerview_minutes">分</string>
    <string name="pickerview_seconds">秒</string>

    <string name="rationale_record_voice">This app needs access microphone to record voice.</string>
    <string name="rationale_photo">This app needs access photos.</string>
    <string name="rationale_camera">This app needs access camera.</string>

    <!--跳转淘宝天猫京东需要的连接数据-->
    <string name="taobao_app_shop">taobao://shop.m.taobao.com/shop/shop_index.htm?shop_id=%1$s</string>
    <string name="taobao_app_goods">taobao://item.taobao.com/item.htm?id=%1$s</string>
    <string name="tmall_app_shop">tmall://page.tm/shop?shop_id=%1$s</string>
    <string name="tmall_app_goods">tmall://tmallclient/?{"action":"item:id=%1$s"}</string>

    <!--开始把文字写入这里了-->
    <string name="tuiguang">推广</string>
    <string name="_1000_300">店铺券满1000减300</string>
    <string name="lingjuan">领券</string>
    <string name="shoucang">收藏</string>
    <string name="fahuo">发货：</string>

    <string name="login_only_can_input">qwertyuioplkjhgfdsazxcvbnmQWERTYUIOPLKJHGFDSAZXCVBNM1234567890</string>
</resources>
