<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/color_FFFFFF">
    <com.youth.banner.Banner
        android:id="@+id/banner"
        android:layout_width="match_parent"
        android:layout_height="332dp"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_FF333333"
                android:textSize="@dimen/sp_12"
                android:text="¥"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textColor="@color/color_EF5B48"
                android:text="2000"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_FF333333"
                android:textSize="@dimen/sp_12"
                android:layout_marginStart="16dp"
                android:text="收益10"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_12"
            android:textColor="@color/color_EF5B48"
            android:text="@string/tuiguang"
            android:gravity="center"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:drawablePadding="5dp"
            android:drawableEnd="@mipmap/right_huise_img"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_EF5B48"
            android:textSize="@dimen/sp_12"
            android:layout_centerVertical="true"
            android:paddingEnd="12dp"
            android:paddingStart="12dp"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            android:background="@drawable/shape_radius16_00000000_stroke_ef5b48"
            android:text="@string/_1000_300"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_12"
            android:textColor="@color/color_EF5B48"
            android:text="@string/lingjuan"
            android:gravity="center"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:drawablePadding="5dp"
            android:drawableEnd="@mipmap/right_huise_img"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_14"
            android:textColor="@color/color_FF333333"
            android:layout_marginEnd="30dp"
            android:layout_centerVertical="true"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="商品名称商品名称商品名称商品名称商品名称商品名称商品名称商品名称商品名称"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_FF999999"
            android:textSize="@dimen/sp_12"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:drawableTop="@mipmap/gray_collection_img"
            android:gravity="center"
            android:text="@string/shoucang"/>
    </RelativeLayout>
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:paddingEnd="16dp"
        android:paddingStart="16dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_12"
                android:textColor="@color/color_FF999999"
                android:text="@string/fahuo"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_12"
                android:textColor="@color/color_FF333333"
                android:text="浙江湖州 "/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_12"
                android:textColor="@color/color_FF999999"
                android:layout_marginEnd="12dp"
                android:layout_marginStart="12dp"
                android:text="|"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_12"
                android:textColor="@color/color_FF999999"
                android:text="快递："/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_12"
                android:textColor="@color/color_FF333333"
                android:text="0.00 至杭州"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_12"
            android:textColor="@color/color_FF999999"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:text="月销5000+"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingStart="16dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_12"
            android:textColor="@color/color_FF999999"
            android:text="服务："/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_12"
            android:textColor="@color/color_FF333333"
            android:text="材质保真·全场包邮·公益商品"/>
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_height="30dp">
            <TextView
                android:id="@+id/tv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_12"
                android:textColor="@color/color_FF999999"
                android:layout_centerVertical="true"
                android:text="选择："/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_12"
                android:textColor="@color/color_FF333333"
                android:layout_toEndOf="@id/tv1"
                android:layout_centerVertical="true"
                android:text="规格名称"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@mipmap/right_huise_img"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:orientation="horizontal"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:gravity="center_vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_12"
                android:textColor="@color/color_FFFFFF"
                android:text="选择："/>
            <com.makeramen.roundedimageview.RoundedImageView
                android:layout_width="26dp"
                android:layout_height="26dp"
                app:riv_corner_radius="4dp"
                android:src="@color/color_FFD1D1D1"/>
            <com.makeramen.roundedimageview.RoundedImageView
                android:layout_width="26dp"
                android:layout_height="26dp"
                app:riv_corner_radius="4dp"
                android:src="@color/color_FFD1D1D1"
                android:layout_marginStart="6dp"/>
            <com.makeramen.roundedimageview.RoundedImageView
                android:layout_width="26dp"
                android:layout_height="26dp"
                app:riv_corner_radius="4dp"
                android:src="@color/color_FFD1D1D1"
                android:layout_marginStart="6dp"/>
            <com.makeramen.roundedimageview.RoundedImageView
                android:layout_width="26dp"
                android:layout_height="26dp"
                app:riv_corner_radius="4dp"
                android:src="@color/color_FFD1D1D1"
                android:layout_marginStart="6dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_FF999999"
                android:textSize="@dimen/sp_12"
                android:layout_marginStart="10dp"
                android:background="@drawable/shape_radius6_fff5f5f5"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:paddingTop="7dp"
                android:paddingBottom="7dp"
                android:gravity="center"
                android:text="共一种规格可选"/>
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:layout_height="44dp">
        <TextView
            android:id="@+id/tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_12"
            android:textColor="@color/color_FF999999"
            android:layout_centerVertical="true"
            android:text="参数："/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_12"
            android:textColor="@color/color_FF333333"
            android:layout_toEndOf="@id/tv2"
            android:layout_centerVertical="true"
            android:text="品牌型号"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/right_huise_img"/>
    </RelativeLayout>
</LinearLayout>
